# confound_corrected_cpm

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PLAN.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: build_docs.yml  package_smoke.yml  publish.yml  python-test.yml  python_deploy_to_pypi.yml  test.yml
api/cpm_regression/: index.html
api/edge_selection/: index.html
api/fold/: index.html
api/models/: index.html
api/results_manager/: index.html
api/simulation/: index.html
assets/: simulated_data_report.html
atlases/: index.html
cccpm/: edge_selection.py  fold.py  models.py  more_models.py  results_manager.py  scoring.py  utils.py
cccpm/reporting/: html_report.py
cccpm/reporting/plots/: cpm_chord_plot.py
cccpm/simulation/: simulate_sem.py
cpm/: __init__.py  cpm_analysis.py  edge_selection.py  fold.py  logging.py  models.py  pipeline.py  report.py  results_manager.py  scoring.py  simulate_data.py  utils.py
cpm/reporting/: chord_plot.py  circular_plot.py  edges.py  html_report.py  info.py  nichord_plot.py  permutations.py  predictions.py  report.py  reporting_utils.py  results.py  streamlit_utils.py
cpm/reporting/plots/: chord_v2.py  cpm_chord_plot.py  plots.py  utils.py
cpm/simulation/: investigate_simulated_data.py  simulate_data.py  simulate_data_new_version.py  simulation_analysis.py  simulation_analysis_backup.py
documentation/: README.md  mkdocs.yml
documentation/docs/: atlases.md  getting_started.md  index.md  installation.md  interpreting_results.md  methods.md  simulation.md
documentation/docs/api/: cpm_regression.md  edge_selection.md  fold.md  models.md  results_manager.md  simulation.md
documentation/docs/examples/: classification.md  human_connectome_project.md  regression.md  simulated_data.md
examples/: atlas_coordinates_design.md  atlas_labels.csv  classification_quickstart.py  config.pkl  confound_inflation_demo.py  example_simulated_classification.py  example_simulated_data.py  example_simulated_data2.py  example_simulated_data3.py  example_slurm.sh  hannah.py  hcp_analysis.py  human_connectome_project.py  macs.py  mediator_sim_example.py  mediator_simulation.py  mediator_simulation_example.py  monte_carlo.py  monte_carlo_tutorial.py  plot_simulation_results.py  plot_simulation_results2.py  regression_quickstart.py  save_config.py  simulate_data_3.py  trap_kongress.py
examples/bench/: benchmarks.py
examples/classification/: index.html
examples/human_connectome_project/: index.html
examples/regression/: index.html
examples/simulated_data/: index.html
getting_started/: index.html
installation/: index.html
interpreting_results/: index.html
methods/: index.html
scripts/: generate_atlas_data.py  preview_report.py
search/: search_index.json
simulation/: index.html  simulate_confounded_data.py  simulate_data_chyzhyk.py  simulate_data_gemini_multivariate.py  simulate_data_sem.py  simulate_data_sem_2.py  simulate_data_sem_gemini.py  simulate_multivariate.py  simulate_simple.py
src/cccpm/: __init__.py  constants.py  cpm_analysis.py  edge_selection.py  fold.py  inner_fold.py  logging.py  models.py  more_models.py  pytorch_model.py  results_manager.py  results_manager_new.py  scoring.py  utils.py
src/cccpm/atlases/: __init__.py  registry.py
src/cccpm/atlases/data/: AAL116.csv  DesikanKilliany68.csv  DesikanKillianyWholeBrain.csv  Destrieux148.csv  DestrieuxWholeBrain.csv  Dosenbach160.csv  Glasser360.csv  GlasserWholeBrain.csv  HarvardOxfordCortical.csv  HarvardOxfordWholeBrain.csv  Power264.csv  SOURCES.md  Schaefer100-17.csv  Schaefer100-7.csv  Schaefer200-17.csv  Schaefer200-7.csv  Schaefer300-17.csv  (+4 more)
src/cccpm/models/: linear_model.py  nonlinear_models.py
src/cccpm/reporting/: __init__.py  data_loader.py  html_report.py  page_generators.py  reporting_utils.py  section_builders.py  table_builders.py
src/cccpm/simulation/: mediator_simulation.py  simulate_sem.py  simulate_simple.py
stylesheets/: extra.css
tests/: analyze_simulated_data.py  conftest.py  test_atlases.py  test_classification.py  test_cpm_analysis.py  test_cpm_regression.py  test_edge_selection.py  test_ground_truth.py  test_integration.py  test_logistic_regression.py  test_models.py  test_package.py  test_reporting.py  test_results_manager.py  test_scoring.py  test_simulate_multivariate.py  test_simulate_sem.py  test_simulate_simple.py  test_sklearn_equivalence.py  test_utils.py
tests/fixtures/: atlas_30.csv
tmp/: cpm_log.txt
tmp/example_simulated_data/: cpm_log.txt
(+9 files in other folders)
