[tool.poetry]
name = "cccpm"
version = "0.1.1"
description = "Confound-Corrected Connectome-based Predictive Modeling Python Package"
authors = [
    "Nils Winter <nils.r.winter@uni-muenster.de>",
    "MMLL <nils.r.winter@uni-muenster.de>"
]
license = "MIT"
readme = "README.md"

# --- CRITICAL CHANGE FOR SRC LAYOUT ---
# This tells Poetry: "The package 'cccpm' lives inside the 'src' directory."
packages = [
    { include = "cccpm", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "*"
pandas = "*"
scikit-learn = ">=1.6"
nilearn = "*"
arakawa = "*"
tqdm = "*"
pygam = "*"

# the following packages are requirements for netplotbrain
netplotbrain = "*"
networkx = "*"
bleach = "*"
tinycss2 = "*"
plotly = "*"
scikit-image = "*"

[tool.poetry.group.dev.dependencies]
pingouin = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"