[tool.poetry]
name = "cccpm"
version = "0.3.0"
description = "Confound-Corrected Connectome-based Predictive Modeling Python Package"
authors = [
    "Nils Winter <nils.r.winter@uni-muenster.de>",
    "MMLL <nils.r.winter@uni-muenster.de>"
]
license = "MIT"
readme = "README.md"
homepage = "https://wwu-mmll.github.io/confound_corrected_cpm/"
repository = "https://github.com/wwu-mmll/confound_corrected_cpm"
documentation = "https://wwu-mmll.github.io/confound_corrected_cpm/"
keywords = ["connectome", "predictive-modeling", "neuroimaging", "cpm", "machine-learning", "psychiatry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "cccpm", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["cccpm"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.paths]
source = [
    "src/cccpm",
    "**/site-packages/cccpm"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
torch = ">=2.2"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = ">=1.6"
statsmodels = "*"
nilearn = "*"
matplotlib = "*"
seaborn = "*"
jinja2 = "*"
pycirclize = "*"
tqdm = "*"
pygam = "*"

# the following packages are requirements for netplotbrain
netplotbrain = "*"
networkx = "*"
bleach = "*"
tinycss2 = "*"
plotly = "*"
scikit-image = "*"

[tool.poetry.group.dev.dependencies]
pingouin = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {version = "*", extras = ["python"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"