# setup.cfg
[metadata]
name = Connectome-based Predictive Modeling Python Package
version = 0.1.0
author = MMLL
author_email = nils.r.winter@uni-muenster.de
description = An example Python package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cpm
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scikit-learn
    pingouin
    streamlit

[options.packages.find]
where = src